add_executable(helloworld helloworld.cpp "binarysearch.cpp")
#target_link_libraries(helloworld my_own_library)

add_executable(tests tests.cpp "binarysearch.cpp")
add_executable(binarysearch binarysearch.cpp)

# Kommentieren Sie die folgenden Zeilen fuer die Aufgabe `mile_to_kilometer` aus
#add_executable(mile_to_kilometer mile_to_kilometer.cpp)
